logs/to_posgrest_v2/insert_data_to_postgres/2023-03-20T12:36:54.160029+00:00/11.log
[2023-03-20 13:20:04,005] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v2.insert_data_to_postgres manual__2023-03-20T12:36:54.160029+00:00 [queued]>
[2023-03-20 13:20:04,042] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v2.insert_data_to_postgres manual__2023-03-20T12:36:54.160029+00:00 [queued]>
[2023-03-20 13:20:04,043] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 13:20:04,044] {taskinstance.py:1239} INFO - Starting attempt 11 of 12
[2023-03-20 13:20:04,045] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 13:20:04,086] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): insert_data_to_postgres> on 2023-03-20 12:36:54.160029+00:00
[2023-03-20 13:20:04,091] {standard_task_runner.py:52} INFO - Started process 5188 to run task
[2023-03-20 13:20:04,099] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'to_posgrest_v2', 'insert_data_to_postgres', 'manual__2023-03-20T12:36:54.160029+00:00', '--job-id', '21', '--raw', '--subdir', 'DAGS_FOLDER/to_postgresql.py', '--cfg-path', '/tmp/tmp9aat70ql', '--error-file', '/tmp/tmp2osbxik_']
[2023-03-20 13:20:04,102] {standard_task_runner.py:77} INFO - Job 21: Subtask insert_data_to_postgres
[2023-03-20 13:20:04,430] {logging_mixin.py:109} INFO - Running <TaskInstance: to_posgrest_v2.insert_data_to_postgres manual__2023-03-20T12:36:54.160029+00:00 [running]> on host 0b4cdb459521
[2023-03-20 13:20:04,769] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=sakabuana31
AIRFLOW_CTX_DAG_ID=to_posgrest_v2
AIRFLOW_CTX_TASK_ID=insert_data_to_postgres
AIRFLOW_CTX_EXECUTION_DATE=2023-03-20T12:36:54.160029+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-20T12:36:54.160029+00:00
[2023-03-20 13:20:04,847] {base.py:79} INFO - Using connection to: id: postgres_localhost. Host: host.docker.internal, Port: 5432, Schema: final, Login: ***, Password: ***, extra: {}
[2023-03-20 13:20:04,924] {dbapi.py:225} INFO - Running statement: 
            # COPY temperature FROM '/opt/***/data/output-csv/dataclean-temperature-lasvegas.csv' DELIMITER ',' CSV HEADER
            LOAD DATA INFILE '/opt/***/data/output-csv/dataclean-temperature-lasvegas.csv'
            INTO TABLE table_name
            FIELDS TERMINATED BY ',' 
            ENCLOSED BY '"'
            LINES TERMINATED BY '
'
            IGNORE 1 ROWS
            ON CONFLICT ON CONSTRAINT temperature_pkey
            DO NOTHING;
        , parameters: None
[2023-03-20 13:20:04,931] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "#"
LINE 2:             # COPY temperature FROM '/opt/***/data/outpu...
                    ^

[2023-03-20 13:20:05,026] {taskinstance.py:1277} INFO - Marking task as UP_FOR_RETRY. dag_id=to_posgrest_v2, task_id=insert_data_to_postgres, execution_date=20230320T123654, start_date=20230320T132004, end_date=20230320T132005
[2023-03-20 13:20:05,067] {standard_task_runner.py:92} ERROR - Failed to execute job 21 for task insert_data_to_postgres
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "#"
LINE 2:             # COPY temperature FROM '/opt/***/data/outpu...
                    ^

[2023-03-20 13:20:05,100] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-03-20 13:20:05,346] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
